[project]
name = "python-tools"
version = "0.1.0"
authors = [
    { name = "ryoppippi", email = "1560508+ryoppippi@users.noreply.github.com" }
]
dependencies = [
    "ruff-lsp>=0.0.45",
    "ruff>=0.1.5",
    "pyright>=1.1.335",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
